snapshot/target/generated-sources/antlr4/org/jqassistant/plugin/c4/antlr/C4Parser.java
// Generated from org/jqassistant/plugin/c4/antlr/C4.g4 by ANTLR 4.13.1
package org.jqassistant.plugin.c4.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class C4Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Startuml=1, Enduml=2, AddProperty=3, Component=4, ComponentExt=5, ComponentDb=6, 
		ComponentDbExt=7, ComponentQueue=8, ComponentQueueExt=9, Container=10, 
		ContainerExt=11, ContainerDb=12, ContainerDbExt=13, ContainerQueue=14, 
		ContainerQueueExt=15, ContainerBoundary=16, System=17, SystemExt=18, SystemDb=19, 
		SystemDbExt=20, SystemQueue=21, SystemQueueExt=22, SystemBoundary=23, 
		Enterprise=24, EnterpriseBoundary=25, Person=26, PersonExt=27, Boundary=28, 
		DB=29, Queue=30, Ext=31, Rel=32, BiRel=33, Param=34, KeyValue=35, Preproc=36, 
		Skinparam=37, ShowLegend=38, Ignore=39, STRING=40, CHAR=41, INT=42, CM=43, 
		RCB=44, LCB=45, LB=46, RB=47, US=48, DL=49, WS=50, NL=51;
	public static final int
		RULE_c4 = 0, RULE_element = 1, RULE_addProperty = 2, RULE_ignore = 3, 
		RULE_c4Element = 4, RULE_hierarchy = 5, RULE_component = 6, RULE_container = 7, 
		RULE_system = 8, RULE_person = 9, RULE_boundary = 10, RULE_paramList = 11, 
		RULE_systemParamList = 12, RULE_genericBoundaryParamList = 13, RULE_boundaryParamList = 14, 
		RULE_rel = 15, RULE_biRel = 16, RULE_relParamList = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"c4", "element", "addProperty", "ignore", "c4Element", "hierarchy", "component", 
			"container", "system", "person", "boundary", "paramList", "systemParamList", 
			"genericBoundaryParamList", "boundaryParamList", "rel", "biRel", "relParamList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'@startuml'", "'@enduml'", "'AddProperty'", "'Component'", null, 
			null, null, null, null, "'Container'", null, null, null, null, null, 
			null, "'System'", null, null, null, null, null, null, "'Enterprise'", 
			null, "'Person'", null, "'Boundary'", "'Db'", "'Queue'", "'_Ext'", null, 
			null, null, null, null, null, null, null, null, null, null, "','", "'{'", 
			"'}'", "'('", "')'", "'_'", "'$'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Startuml", "Enduml", "AddProperty", "Component", "ComponentExt", 
			"ComponentDb", "ComponentDbExt", "ComponentQueue", "ComponentQueueExt", 
			"Container", "ContainerExt", "ContainerDb", "ContainerDbExt", "ContainerQueue", 
			"ContainerQueueExt", "ContainerBoundary", "System", "SystemExt", "SystemDb", 
			"SystemDbExt", "SystemQueue", "SystemQueueExt", "SystemBoundary", "Enterprise", 
			"EnterpriseBoundary", "Person", "PersonExt", "Boundary", "DB", "Queue", 
			"Ext", "Rel", "BiRel", "Param", "KeyValue", "Preproc", "Skinparam", "ShowLegend", 
			"Ignore", "STRING", "CHAR", "INT", "CM", "RCB", "LCB", "LB", "RB", "US", 
			"DL", "WS", "NL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "C4.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public C4Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class C4Context extends ParserRuleContext {
		public Token name;
		public TerminalNode Startuml() { return getToken(C4Parser.Startuml, 0); }
		public TerminalNode Enduml() { return getToken(C4Parser.Enduml, 0); }
		public TerminalNode EOF() { return getToken(C4Parser.EOF, 0); }
		public List<TerminalNode> NL() { return getTokens(C4Parser.NL); }
		public TerminalNode NL(int i) {
			return getToken(C4Parser.NL, i);
		}
		public List<TerminalNode> Preproc() { return getTokens(C4Parser.Preproc); }
		public TerminalNode Preproc(int i) {
			return getToken(C4Parser.Preproc, i);
		}
		public List<TerminalNode> Skinparam() { return getTokens(C4Parser.Skinparam); }
		public TerminalNode Skinparam(int i) {
			return getToken(C4Parser.Skinparam, i);
		}
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public TerminalNode ShowLegend() { return getToken(C4Parser.ShowLegend, 0); }
		public TerminalNode Param() { return getToken(C4Parser.Param, 0); }
		public C4Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_c4; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C4Listener ) ((C4Listener)listener).enterC4(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C4Listener ) ((C4Listener)listener).exitC4(this);
		}
	}

	public final C4Context c4() throws RecognitionException {
		C4Context _localctx = new C4Context(_ctx, getState());
		enterRule(_localctx, 0, RULE_c4);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			match(Startuml);
			setState(38);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Param) {
				{
				setState(37);
				((C4Context)_localctx).name = match(Param);
				}
			}

			setState(41); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(40);
				match(NL);
				}
				}
				setState(43); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NL );
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Preproc) {
				{
				{
				setState(45);
				match(Preproc);
				setState(47); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(46);
					match(NL);
					}
					}
					setState(49); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NL );
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Skinparam) {
				{
				{
				setState(56);
				match(Skinparam);
				setState(58); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(57);
					match(NL);
					}
					}
					setState(60); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NL );
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 563160809464L) != 0)) {
				{
				{
				setState(67);
				element();
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ShowLegend) {
				{
				setState(73);
				match(ShowLegend);
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NL) {
					{
					{
					setState(74);
					match(NL);
					}
					}
					setState(79);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(82);
			match(Enduml);
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(83);
				match(NL);
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(89);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElementContext extends ParserRuleContext {
		public RelContext rel() {
			return getRuleContext(RelContext.class,0);
		}
		public BiRelContext biRel() {
			return getRuleContext(BiRelContext.class,0);
		}
		public List<TerminalNode> NL() { return getTokens(C4Parser.NL); }
		public TerminalNode NL(int i) {
			return getToken(C4Parser.NL, i);
		}
		public C4ElementContext c4Element() {
			return getRuleContext(C4ElementContext.class,0);
		}
		public List<AddPropertyContext> addProperty() {
			return getRuleContexts(AddPropertyContext.class);
		}
		public AddPropertyContext addProperty(int i) {
			return getRuleContext(AddPropertyContext.class,i);
		}
		public List<IgnoreContext> ignore() {
			return getRuleContexts(IgnoreContext.class);
		}
		public IgnoreContext ignore(int i) {
			return getRuleContext(IgnoreContext.class,i);
		}
		public HierarchyContext hierarchy() {
			return getRuleContext(HierarchyContext.class,0);
		}
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C4Listener ) ((C4Listener)listener).enterElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C4Listener ) ((C4Listener)listener).exitElement(this);
		}
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_element);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AddProperty || _la==Ignore) {
				{
				{
				setState(93);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case AddProperty:
					{
					setState(91);
					addProperty();
					}
					break;
				case Ignore:
					{
					setState(92);
					ignore();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(96); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(95);
					match(NL);
					}
					}
					setState(98); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NL );
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(111);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Component:
			case ComponentExt:
			case ComponentDb:
			case ComponentDbExt:
			case ComponentQueue:
			case ComponentQueueExt:
			case Container:
			case ContainerExt:
			case ContainerDb:
			case ContainerDbExt:
			case ContainerQueue:
			case ContainerQueueExt:
			case ContainerBoundary:
			case System:
			case SystemExt:
			case SystemDb:
			case SystemDbExt:
			case SystemQueue:
			case SystemQueueExt:
			case SystemBoundary:
			case EnterpriseBoundary:
			case Person:
			case PersonExt:
			case Boundary:
				{
				{
				setState(105);
				c4Element();
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==RCB) {
					{
					setState(106);
					hierarchy();
					}
				}

				}
				}
				break;
			case Rel:
				{
				setState(109);
				rel();
				}
				break;
			case BiRel:
				{
				setState(110);
				biRel();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(114); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(113);
				match(NL);
				}
				}
				setState(116); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NL );
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AddPropertyContext extends ParserRuleContext {
		public Token key;
		public Token value;
		public TerminalNode AddProperty() { return getToken(C4Parser.AddProperty, 0); }
		public TerminalNode LB() { return getToken(C4Parser.LB, 0); }
		public TerminalNode CM() { return getToken(C4Parser.CM, 0); }
		public TerminalNode RB() { return getToken(C4Parser.RB, 0); }
		public List<TerminalNode> Param() { return getTokens(C4Parser.Param); }
		public TerminalNode Param(int i) {
			return getToken(C4Parser.Param, i);
		}
		public AddPropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addProperty; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C4Listener ) ((C4Listener)listener).enterAddProperty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C4Listener ) ((C4Listener)listener).exitAddProperty(this);
		}
	}

	public final AddPropertyContext addProperty() throws RecognitionException {
		AddPropertyContext _localctx = new AddPropertyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_addProperty);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(AddProperty);
			setState(119);
			match(LB);
			setState(120);
			((AddPropertyContext)_localctx).key = match(Param);
			setState(121);
			match(CM);
			setState(122);
			((AddPropertyContext)_localctx).value = match(Param);
			setState(123);
			match(RB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IgnoreContext extends ParserRuleContext {
		public TerminalNode Ignore() { return getToken(C4Parser.Ignore, 0); }
		public IgnoreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ignore; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C4Listener ) ((C4Listener)listener).enterIgnore(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C4Listener ) ((C4Listener)listener).exitIgnore(this);
		}
	}

	public final IgnoreContext ignore() throws RecognitionException {
		IgnoreContext _localctx = new IgnoreContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ignore);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(Ignore);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class C4ElementContext extends ParserRuleContext {
		public ComponentContext component() {
			return getRuleContext(ComponentContext.class,0);
		}
		public ContainerContext container() {
			return getRuleContext(ContainerContext.class,0);
		}
		public SystemContext system() {
			return getRuleContext(SystemContext.class,0);
		}
		public PersonContext person() {
			return getRuleContext(PersonContext.class,0);
		}
		public BoundaryContext boundary() {
			return getRuleContext(BoundaryContext.class,0);
		}
		public C4ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_c4Element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C4Listener ) ((C4Listener)listener).enterC4Element(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C4Listener ) ((C4Listener)listener).exitC4Element(this);
		}
	}

	public final C4ElementContext c4Element() throws RecognitionException {
		C4ElementContext _localctx = new C4ElementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_c4Element);
		try {
			setState(132);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Component:
			case ComponentExt:
			case ComponentDb:
			case ComponentDbExt:
			case ComponentQueue:
			case ComponentQueueExt:
				enterOuterAlt(_localctx, 1);
				{
				setState(127);
				component();
				}
				break;
			case Container:
			case ContainerExt:
			case ContainerDb:
			case ContainerDbExt:
			case ContainerQueue:
			case ContainerQueueExt:
				enterOuterAlt(_localctx, 2);
				{
				setState(128);
				container();
				}
				break;
			case System:
			case SystemExt:
			case SystemDb:
			case SystemDbExt:
			case SystemQueue:
			case SystemQueueExt:
				enterOuterAlt(_localctx, 3);
				{
				setState(129);
				system();
				}
				break;
			case Person:
			case PersonExt:
				enterOuterAlt(_localctx, 4);
				{
				setState(130);
				person();
				}
				break;
			case ContainerBoundary:
			case SystemBoundary:
			case EnterpriseBoundary:
			case Boundary:
				enterOuterAlt(_localctx, 5);
				{
				setState(131);
				boundary();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HierarchyContext extends ParserRuleContext {
		public TerminalNode RCB() { return getToken(C4Parser.RCB, 0); }
		public TerminalNode LCB() { return getToken(C4Parser.LCB, 0); }
		public List<TerminalNode> NL() { return getTokens(C4Parser.NL); }
		public TerminalNode NL(int i) {
			return getToken(C4Parser.NL, i);
		}
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public HierarchyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hierarchy; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C4Listener ) ((C4Listener)listener).enterHierarchy(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C4Listener ) ((C4Listener)listener).exitHierarchy(this);
		}
	}

	public final HierarchyContext hierarchy() throws RecognitionException {
		HierarchyContext _localctx = new HierarchyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_hierarchy);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(134);
			match(RCB);
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(135);
				match(NL);
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 563160809464L) != 0)) {
				{
				{
				setState(141);
				element();
				}
				}
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(147);
			match(LCB);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComponentContext extends ParserRuleContext {
		public org.jqassistant.plugin.c4.data.SecondaryElementType secondaryType;
		public boolean external;
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public TerminalNode Component() { return getToken(C4Parser.Component, 0); }
		public TerminalNode ComponentExt() { return getToken(C4Parser.ComponentExt, 0); }
		public TerminalNode ComponentDb() { return getToken(C4Parser.ComponentDb, 0); }
		public TerminalNode ComponentDbExt() { return getToken(C4Parser.ComponentDbExt, 0); }
		public TerminalNode ComponentQueue() { return getToken(C4Parser.ComponentQueue, 0); }
		public TerminalNode ComponentQueueExt() { return getToken(C4Parser.ComponentQueueExt, 0); }
		public ComponentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_component; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C4Listener ) ((C4Listener)listener).enterComponent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C4Listener ) ((C4Listener)listener).exitComponent(this);
		}
	}

	public final ComponentContext component() throws RecognitionException {
		ComponentContext _localctx = new ComponentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_component);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Component:
				{
				setState(149);
				match(Component);
				 ((ComponentContext)_localctx).secondaryType =  org.jqassistant.plugin.c4.data.SecondaryElementType.DEFAULT; 
				}
				break;
			case ComponentExt:
				{
				setState(151);
				match(ComponentExt);
				 ((ComponentContext)_localctx).secondaryType =  org.jqassistant.plugin.c4.data.SecondaryElementType.DEFAULT; ((ComponentContext)_localctx).external =  true; 
				}
				break;
			case ComponentDb:
				{
				setState(153);
				match(ComponentDb);
				 ((ComponentContext)_localctx).secondaryType =  org.jqassistant.plugin.c4.data.SecondaryElementType.DB; 
				}
				break;
			case ComponentDbExt:
				{
				setState(155);
				match(ComponentDbExt);
				 ((ComponentContext)_localctx).secondaryType =  org.jqassistant.plugin.c4.data.SecondaryElementType.DB; ((ComponentContext)_localctx).external =  true; 
				}
				break;
			case ComponentQueue:
				{
				setState(157);
				match(ComponentQueue);
				 ((ComponentContext)_localctx).secondaryType =  org.jqassistant.plugin.c4.data.SecondaryElementType.QUEUE; 
				}
				break;
			case ComponentQueueExt:
				{
				setState(159);
				match(ComponentQueueExt);
				 ((ComponentContext)_localctx).secondaryType =  org.jqassistant.plugin.c4.data.SecondaryElementType.QUEUE; ((ComponentContext)_localctx).external =  true; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(163);
			paramList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ContainerContext extends ParserRuleContext {
		public org.jqassistant.plugin.c4.data.SecondaryElementType secondaryType;
		public boolean external;
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public TerminalNode Container() { return getToken(C4Parser.Container, 0); }
		public TerminalNode ContainerExt() { return getToken(C4Parser.ContainerExt, 0); }
		public TerminalNode ContainerDb() { return getToken(C4Parser.ContainerDb, 0); }
		public TerminalNode ContainerDbExt() { return getToken(C4Parser.ContainerDbExt, 0); }
		public TerminalNode ContainerQueue() { return getToken(C4Parser.ContainerQueue, 0); }
		public TerminalNode ContainerQueueExt() { return getToken(C4Parser.ContainerQueueExt, 0); }
		public ContainerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_container; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C4Listener ) ((C4Listener)listener).enterContainer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C4Listener ) ((C4Listener)listener).exitContainer(this);
		}
	}
